--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/Yabelly/scoring-system-bouldering#readme",
     "dependencies": {
         "compression": "^1.7.4",
+        "cookie-session": "^2.0.0",
         "express": "^4.18.1",
         "pg": "^8.8.0",
         "react-router-dom": "^6.4.0",
